# tcpHostCLI_linux

./: CMakeLists.txt  README.md
include/: ClientResponse.h  ServerQueries.h  UsageHelper.h  clientManager.h  signalManager.h  tcpNetworkManager.h
src/: ClientResponse.cpp  ServerQueries.cpp  UsageHelper.cpp  clientManager.cpp  main.cpp  signalManager.cpp  tcpNetworkManager.cpp
